<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_point"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEEEEEE" >

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_128dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/image_item"
            android:text="@string/title_item"
            android:textStyle="bold"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/label_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/image_item"
            android:layout_below="@id/title_item"
            android:layout_marginEnd="10dp"
            android:text="@string/label_latitude"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/label_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_item"
            android:layout_below="@id/label_latitude"
            android:layout_marginEnd="10dp"
            android:text="@string/label_longitude"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/label_latitude"
            android:layout_below="@id/title_item"
            android:text="@string/placeholder_lat"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/label_longitude"
            android:layout_below="@id/latitude"
            android:text="@string/placeholder_lat"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
